devops/kubernetes/exemple/rentahouse/rabbitmq/standalone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-rabbitmq-amqp
  namespace: rabbitmq-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/name: rabbitmq
  ports:
  - protocol: TCP
    port: 5672
    targetPort: 5672
    nodePort: 30572
---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-rabbitmq-stats
  namespace: rabbitmq-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/name: rabbitmq
  ports:
  - protocol: TCP
    port: 15672
    targetPort: 15672
    nodePort: 30172
